# lazycat-terminal

./: .gitignore  BACKGROUND_ACTIVITY_FEATURE.md  KEYBOARD_SHORTCUTS.md  PKGBUILD  PKGBUILD-git  README.md  README.zh-CN.md  config.conf  lazycat-terminal.desktop.in  meson.build
src/: config_manager.vala  confirm_dialog.vala  keymap.vala  main.vala  settings_dialog.vala  shadow_window.vala  style_helper.vala  tab_bar.vala  terminal_tab.vala  window.vala
